@@ -14,6 +14,7 @@ Laurent Petit <laurent dot petit at gmail dot com>
 
 === Bug fixes
 
+- `New Clojure namespace` wizard now works with fully qualified namespaces, pre-fills the input text with the currently selected package name and creates missing packages on the fly. Fix Issue #468
 - `New Clojure namespace` wizard now accepts file starting with numbers. Fix Issue #466
 - Upgraded missing dependency on `ccw.server 0.1.1` which is where the fix for Code Completion not succeeding sometimes is located!
 
